fix: add condition for determing znaLink style when truncating domain

--- a/src/components/ZNALink/ZNALink.module.scss
+++ b/src/components/ZNALink/ZNALink.module.scss
@@ -75,6 +75,12 @@
 		}
 	}
 
+	.isNetworkSet {
+		a:not(:first-of-type):not(:nth-of-type(1)):not(:last-of-type) {
+			display: none !important;
+		}
+	}
+
 	.Dots {
 		display: inline-block;
 	}
